<?xml version="1.0" encoding="utf-8"?>
<!-- Everything is in the Constraint Layout -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileActivity">

    <!-- Profile Page Title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_page_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <!-- Settings Button -->
    <ImageButton
        android:id="@+id/profile_settings_button"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/ic_settings"
        android:contentDescription="@string/settings_button_description"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:padding="3dp"
        app:tint="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <FrameLayout
        android:id="@+id/profile_picture_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_container"
        app:layout_constraintVertical_bias="1">

        <!-- Profile Picture -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_picture_imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:padding="2dp"
            app:shapeAppearanceOverlay="@style/CircleImageView"
            app:strokeColor="@color/filter_grey2"
            app:strokeWidth="2dp"
            tools:srcCompat="@tools:sample/avatars" />

        <!-- Overlaid "+" button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_picture_add_button"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:backgroundTint="@color/grey"
            android:contentDescription="@string/add_profile_picture"
            app:strokeWidth="2dp"
            app:strokeColor="@color/filter_grey2"
            app:icon="@drawable/ic_add"
            app:iconTint="@color/black"
            app:iconSize="30dp" />


    </FrameLayout>

    <!-- Profile Container -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="70dp"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toTopOf="@id/navigation_bar_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7">

        <!-- Name Header -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_name_header"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#388E3C"
            android:layout_marginBottom="4dp"/>

        <!-- Name Input Text Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="#388E3C"
            app:hintTextColor="#388E3C">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/required_input_field"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email Header -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_email_header"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#388E3C"
            android:layout_marginBottom="4dp"/>

        <!-- Email Input Text Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="#388E3C"
            app:hintTextColor="#388E3C">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/required_input_field"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Phone Number Header -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_phone_header"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#388E3C"
            android:layout_marginBottom="4dp"/>

        <!-- Phone Number Input Text Field -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxStrokeColor="#388E3C"
            app:hintTextColor="#388E3C">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/profile_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/optional_input_field"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Update Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_update_button"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/update_button_text"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#388E3C"
            app:cornerRadius="8dp" />

    </LinearLayout>

    <!-- Navigation Bar -->
    <FrameLayout
        android:id="@+id/navigation_bar_fragment"
        android:name="com.example.matrix_events.fragments.NavigationBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Fragment Container -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>